# kino

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
include/: booking.h
src/: booking.cpp  kino.cpp
test/: CMakeLists.txt  test.cpp  testdata.h
